--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>AYOvest</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
